<resources>
    <string name="app_name" translatable="false">Poczta Skaner</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Logowanie</string>
    <string name="welcome">"Witamy"</string>
    <string name="invalid_username">Niepoprawny login</string>
    <string name="invalid_password">Niepoprawne hasło</string>
    <string name="login_failed">"Logowanie nie powiodło się"</string>
    <string name="welcome_login">"Poczta: Aplikacja do skanu przesyłek"</string>
    <string name="description_image">"Logo PPP PPP"</string>
    <string name="error_password">"Błedne hasło"</string>
    <string name="error_login">"Błedny login"</string>
    <string name="title_activity_skaner">SkanerActivity</string>
    <string name="db_error">Nie udało się zalogować na serwer</string>
    <!--    Skaner -->
    <string name="skan_text_btn">Skan</string>
    <string name="licznik_ladunke">Ładunek</string>
    <string name="licznik_kolejka">Zakolejkowano</string>
    <string name="exit_scan">Powrót</string>
    <string name="title_activity_camera_test">CameraTest</string>
    <string name="zeskanowany_kod">Nie zeskanowano jescze kodu</string>
    <!--    Menu-->
    <string name="rozlS">1. Skan rozładunkowy</string>
    <string name="zalS">2. Skan załadunkowy</string>
    <string name="zmienStan">4. Zgłoszenie uszkodzenia paczki</string>
    <string name="Podglad">3. Podgląd magazynu</string>
    <string name="wylog">Wyloguj się</string>
    <string name="wer">5. Podgląd ładunku</string>
    <string name="infoLadunek">Nie ma aktywnego ładunku</string>
    <!--    Spis paczek-->
    <string name="licz_pacz">Identyfikator paczki</string>
    <string name="status">Status</string>
<!--    Otwarcie/Stworzenie ładunku-->
    <string name="odmowa">Nie/\nWyjście</string>
    <string name="akcep_Stw">Tak/\nStworzenie ładunku</string>
    <string name="akcep_Otw">Tak/\nOtwarcie Ładunku</string>
    <string name="pytanie_Otw">Czy otworzyć ładunek dla paczki?</string>
    <string name="pytanie_Stw">Czy stworzyć ładunek?</string>
    <string name="ostrzerzenie_Stw">Nie istnieje ładunek\n w któym znajduje się paczka:\n </string>


</resources>