<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jasny_niebieski"
    android:transitionName="@string/db_error"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:padding="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/rozladunke"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/niebieski"
            android:text="@string/rozlS" />
        <Button
            android:id="@+id/zaladunek"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:background="@color/niebieski"
            android:layout_height="60dp"
            android:text="@string/zalS" />
        <Button
            android:id="@+id/podglad"
            android:background="@color/niebieski"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Podglad" />
        <Button
            android:id="@+id/stanPaczki"
            android:layout_marginBottom="20dp"
            android:background="@color/niebieski"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/zmienStan" />

        <Button
            android:id="@+id/wer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/niebieski"
            android:text="@string/wer" />

        <TextView
            android:id="@+id/ladunekId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/ciemno_niebieski"
            android:text="@string/infoLadunek" />

        <Button
            android:id="@+id/wylog"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/czerwony_blad"
            android:textColor="@color/kremowy_niebieski"
            android:text="@string/wylog" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>