<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/jasny_niebieski"
    android:layout_height="match_parent"
    tools:context=".LoadCreationActivity">

    <TextView
        android:id="@+id/ostrzerzenie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:text="@string/ostrzerzenie_Stw"
        android:textColor="@color/ciemno_niebieski"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="28sp"
        android:textAlignment="gravity"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pytanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pytanie_Stw"
        android:textColor="@color/ciemno_niebieski"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ostrzerzenie"
        app:layout_constraintVertical_bias="0.548" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="225dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/odmowa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/kremowy_niebieski"
            android:background="@color/lekki_czerwony"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="10dp"

            android:text="@string/odmowa" />

        <Button
            android:id="@+id/akceptacja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/kremowy_niebieski"
            android:background="@color/ciemno_niebieski"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"
            android:text="@string/akcep_Stw" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>